2008-6-18  John E. Davis  <davis@space.mit.edu>

	* src/jdfits.h (JDFITS_VERSION): bumped to 165

	* src/fitsbin.c (jdfits_bintable_dump_data): Changed display
	  width for NaN.

	* src/fitsfmt.c (jdfits_ffmt_to_cfmt): Added buffer-overflow check.

2008-5-23  John E. Davis  <davis@space.mit.edu>

	* src/jdfits.h (JDFITS_VERSION): bumped to 164

	* src/fits.c (is_commentary_keyword): such keywords are
	  allowed to have an = in column 9.

2005-9-8  John E. Davis  <davis@space.mit.edu>

	* src/jdfits.h (JDFITS_VERSION): bumped to 163

	* src/fitsbin.c (jdfits_bintable_dump_data): removed the limit
	on the maximum repeat value for string fields.

2004-6-4  John E. Davis  <davis@space.mit.edu>

	* src/jdfits.h (JDFITS_VERSION): bumped to 162

	* src/fitshdr.c (jdfits_extract_double): Add support for
	fortran formats that use 'D' for the exponent.

2003-1-30  John E. Davis  <davis@space.mit.edu>

	* src/fitsbin.c (jdfits_bintable_dump_data): tweaks to cause
	column headings to line up with the data in the columns.

2002-9-12  John E. Davis  <davis@space.mit.edu>

	* src/fitsbin.c (jdfits_bintable_dump_data): change default
	format from e.g., "%15.9f" to "% 15.9f".

2001-8-23  John E. Davis  <davis@space.mit.edu>

	* src/fits.c (jdfits_parse_key): only use the keyword type if
	the type argument is JDFITS_ALL_TYPES.

	* src/fitsbin.c (jdfits_bintable_dump_data): added some
	support for the disgusting unsigned hack.

2000-7-21  John E. Davis  <davis@space.mit.edu>

	* src/fitsfmt.c (jdfits_ffmt_to_cfmt): if format is blank or
	not, return error

2000-6-21  John E. Davis  <davis@space.mit.edu>

	* src/fits.c (parse_string): ugly hack to handle cards without
	values.

2000-6-8  John E. Davis  <davis@space.mit.edu>

	* src/fitsbin.c (jdfits_bintable_parse_headers): permit space
	characters at beginning of TFORM values.

2000-5-11  John E. Davis  <davis@space.mit.edu>

	* src/fitsdump.c (fitsdump_file): add cast to long for alpha
