@@ -1,4 +1,4 @@
-    Copyright (C) 2002 MIT Center For Space Research
+    Copyright (C) 2002-2010 MIT Center For Space Research
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
